# maestro-analyze

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/plans/: 2026-03-17-plugin-architecture.md
skill/: SKILL.md
src/maestro_analyze/: __init__.py  __main__.py
src/maestro_analyze/cli/: __init__.py
src/maestro_analyze/core/: config.py  errors.py  registry.py  store.py
src/maestro_analyze/engine/: analyzer.py  charts.py
src/maestro_analyze/engine/chart_builders/: __init__.py  _base.py  _svg_base.py  advanced.py  bar.py  basic.py  bland_altman.py  box.py  bubble.py  bump_chart.py  coverage_matrix.py  distribution.py  event_band.py  event_timeline.py  funnel.py  heatmap_corr.py  heatmap_grid.py  histogram.py  line.py  lollipop.py  pie.py  radar.py  sankey.py  scatter.py  slope_chart.py  sparkline.py  stacked_area.py  statistical.py  table_view.py  treemap.py  trust_radar.py  wordcloud.py
src/maestro_analyze/engine/strategies/: __init__.py  compare.py  funnel.py  profile.py  trend.py
src/maestro_analyze/interfaces/: sdk.py
tests/unit/: test_registry.py
